--- a/style.css
+++ b/style.css
@@ -48,4 +48,7 @@ header nav ul li :last-child a {
   header nav ul li a:hover {
     color: #bdbdbd;
   }
+  main form div {
+    margin: 10px;
+  }
 }
